Complete implementation of And-Or-Graph-Search.